SQL tweaks / removing email background

--- a/src/my.css
+++ b/src/my.css
@@ -4,7 +4,7 @@ MY EMAIL STYLES */
 body
 {
 	background-color: #FFF;
-	background-image: url("images/paper-bg.jpg");
+	/* background-image: url("images/paper-bg.jpg"); */
 }
 
 .header
